# wasi-nn

./: .gitignore  README.md  assemblyScriptBlog.md  assemblyScriptBlog.md.bak  barchart.py  build.sh  linechart.py
.github/actions/install-openvino/: install.sh
.github/workflows/: main.yaml  main.yml
assemblyscript/: .gitignore  .npmignore  README.md  demo.sh  index.js  package.json  setup.sh
assemblyscript/assembly/: as-wasi-nn.ts  example.ts  imagenet_classes.ts  index.ts  wasi_ephemeral_nn.ts
assemblyscript/assembly/convert_image/host/: as-wasi-nn.ts  object-classification.ts  wasi_ephemeral_nn.ts
assemblyscript/assembly/convert_image/local/: as-wasi-nn.ts  object-classification.ts  wasi_ephemeral_nn.ts
assemblyscript/assembly/examples/: object-identification.ts
assemblyscript/docs/: index.html  modules.html
assemblyscript/docs/assets/js/: search.js
assemblyscript/docs/classes/: Graph.html  Tensor.html
assemblyscript/docs/enums/: ExecutionTarget.html  GraphEncoding.html  TensorType.html
assemblyscript/examples/: object-classification.ts
assemblyscript/images/: 0.bgr  1.bgr
assemblyscript/patches/: as-wasi+0.4.4.patch
assemblyscript/tests/: index.js
image2tensor/: Cargo.toml  README.md
image2tensor/src/: image2tensor.rs  lib.rs
rust/: Cargo.toml  README.md
rust/examples/classification-example/: Cargo.toml  README.md
rust/examples/classification-example/lib/: Cargo.toml
rust/examples/classification-example/lib/src/: bindings.rs  lib.rs
rust/examples/classification-example/models/inception_v3/: tensor.desc
rust/examples/classification-example/models/mobilenet_v2/: saved_model.pb
rust/examples/classification-example/models/mobilenet_v2/variables/: variables.index
rust/examples/classification-example/models/resnet50/: tensor.desc
rust/examples/classification-example/src/: imagenet_classes.rs  main.rs  saved_model.pb  test.rs
rust/examples/classification-example/wit/: example.wit
rust/examples/images/: README.md
rust/images/: 2.bgr  3.bgr  4.bgr
rust/scripts/: regenerate-bindings-from-wit.sh  regenerate-bindings-from-witx.sh
rust/src/: error.rs  generated.rs  graph.rs  hl.rs  lib.rs  tensor.rs
rust/src/utils/: mod.rs  shared_slice.rs
