[package]
name = "wasi-nn"
version = "0.3.0"
authors = ["The Bytecode Alliance Developers"]
description = "High-level Rust bindings for wasi-nn"
license = "Apache-2.0"
categories = ["wasm", "computer-vision"]
keywords = ["webassembly", "wasm", "neural-network"]
repository = "https://github.com/bytecodealliance/wasi-nn"
readme = "README.md"
edition = "2018"
publish = true

exclude = [
    "examples",
    "scripts",
    "Cargo.lock",
]

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]

[dependencies]
thiserror = "1"

[workspace]
