[package]
name = "wasi-nn-example"
version = "0.19.0"
authors = ["The Bytecode Alliance Developers"]
readme = "README.md"
edition = "2018"
publish = false

[features]
performance = ["floating-duration", "statistical"]

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
wasi-nn = { path = "../../", version = "0.1.0" }
floating-duration = { version = "0.1.2", optional = true }
statistical = { version = "1.0.0", optional = true }
# This crate is built with the wasm32-wasi target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.
[workspace]
