[package]
name = "wasi-nn-example"
version = "0.19.0"
authors = ["The Bytecode Alliance Developers"]
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
image2tensor = { path = "../../../image2tensor", version = "0.2.0" }
wasi-nn = { path = "../../", version = "0.2.1" }
floating-duration = { version = "0.1.2" }
statistical = { version = "1.0.0" }
# This crate is built with the wasm32-wasi target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.
[workspace]
