[package]
name = "wasi-nn-example-lib"
version = "0.19.0"
authors = ["The Bytecode Alliance Developers"]
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
wasi-nn = { path = "../../../" }
image2tensor = { path = "../../../../image2tensor" }
wit-bindgen = { version = "0.21.0", default-features = true, features = ['macros'] }

[package.metadata.component]
adapter = "wasi_snapshot_preview1.reactor.wasm"

[lib]
crate-type = ["cdylib"]
